Updated API (inc. ID in Annotation) + extraction of subsumption relation from disambiguated trees.